Ultimos detalles de presentación

--- a/eda_udemy.ipynb
+++ b/eda_udemy.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Importamos librerias\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
@@ -92,6 +93,7 @@
     }
    ],
    "source": [
+    "# Creamos el dataset\n",
     "df_udemy = pd.read_csv(\"Datasets/udemy_courses.csv\")\n",
     "df_udemy.head(1)"
    ]
